better images for carousel (beter resolution) and better responsive for homepage carousel

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -39,4 +39,4 @@ liip_imagine:
             # list of transformations to apply (the "filters")
             filters:
                 scale:
-                    dim: [1200,900]
+                    dim: [1920, 1080]
