button display for préference (cookies) but don't send pref infos

--- a/config/routes/ch_cookie_consent.yaml
+++ b/config/routes/ch_cookie_consent.yaml
@@ -1,2 +1,2 @@
-ch_cookie_consent:
-    resource: "@CHCookieConsentBundle/Resources/config/routing.yaml"
+#ch_cookie_consent:
+#    resource: "@CHCookieConsentBundle/Resources/config/routing.yaml"
