--- a/config/packages/ch_cookie_consent.yaml
+++ b/config/packages/ch_cookie_consent.yaml
@@ -7,5 +7,5 @@ ch_cookie_consent:
         - 'social_media'
     use_logger: true # Logs user actions to database
     position: 'bottom' # top, bottom
-    simplified: true # When set to true the user can only deny or accept all cookies at once
+    simplified: false # When set to true the user can only deny or accept all cookies at once
     http_only: true # Sets HttpOnly on cookies
