--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -59,7 +59,8 @@ liip_imagine:
 
             # list of transformations to apply (the "filters")
             filters:
+                fixed:
 
-                # create a thumbnail: set size to 120x90 and use the "outbound" mode
-                # to crop the image when the size ratio of the input differs
-                thumbnail: { size: [ 400, 400 ], mode: outbound }
+                    # set the fixed size to "400x400" pixels
+                    width: 400
+                    height: 400
